kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: d001-ingress
  namespace: d001-devops

  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:

  rules:

  - host: d001.example.com

    http:

      paths:

      - path: /
        pathType: Prefix

        backend:

          service:
            name: frontend-service

            port:
              number: 80

      - path: /api
        pathType: Prefix

        backend:

          service:
            name: backend-service

            port:
              number: 5000
